feat(cashflow): strengthen JVM settlement authority
Make cumulative closing, weekly completion evidence, operation reconciliation, and applied-cell history authoritative in the JVM service.